Refactor accessibility for RichSeatCell: remove explicit elements, add button trait to likeLabel

--- a/project.yml
+++ b/project.yml
@@ -14,7 +14,9 @@ targets:
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.voiceoverdemo.VoiceOverDemo
       INFOPLIST_FILE: VoiceOverDemo/Info.plist
-      DEVELOPMENT_TEAM: ""
+      CODE_SIGN_STYLE: Automatic
+      CODE_SIGN_IDENTITY: "Apple Development"
+      DEVELOPMENT_TEAM: "3D959YCYQR"
     info:
       path: VoiceOverDemo/Info.plist
       properties:
