Fix signing/build issues & enforce xcodegen workflow
- project.yml: Add Team ID and explicit schemes
- install_device.sh: Fix device ID usage (Legacy vs CoreDevice)
- .gitignore: Ignore xcodeproj and build logs
- Remove xcodeproj from git to rely on xcodegen

--- a/project.yml
+++ b/project.yml
@@ -16,6 +16,7 @@ targets:
       INFOPLIST_FILE: VoiceOverDemo/Info.plist
       CODE_SIGN_STYLE: Automatic
       CODE_SIGN_IDENTITY: "Apple Development"
+      DEVELOPMENT_TEAM: CT8CT953JS
     info:
       path: VoiceOverDemo/Info.plist
       properties:
@@ -42,3 +43,17 @@ targets:
           - UIInterfaceOrientationPortraitUpsideDown
           - UIInterfaceOrientationLandscapeLeft
           - UIInterfaceOrientationLandscapeRight
+
+schemes:
+  VoiceOverDemo:
+    build:
+      targets:
+        VoiceOverDemo: all
+    run:
+      config: Debug
+    profile:
+      config: Release
+    analyze:
+      config: Debug
+    archive:
+      config: Release
